--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -5,3 +5,5 @@ management.endpoints.web.exposure.include=*
 endpoints.restart.enabled = true
 ##消息中间件地址
 spring.rabbitmq.addresses=192.168.234.135:5672
+
+harry.name=zhouhong
