--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -3,7 +3,7 @@
 management.endpoints.web.exposure.include=*
 ## 激活 restart Endpoint
 endpoints.restart.enabled = true
+INSTANCE_INDEX=0
+spring.application.index=${INSTANCE_INDEX}
 ##消息中间件地址
 spring.rabbitmq.addresses=192.168.234.135:5672
-
-harry.name=zhouhong
