--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -7,3 +7,5 @@ endpoints.restart.enabled = true
 #spring.application.index=${INSTANCE_INDEX}
 ##消息中间件地址
 spring.rabbitmq.addresses=192.168.234.135:5672
+#默认事件跟踪功能是失效，使用时需要激活
+spring.cloud.bus.trace.enabled=true
