--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -1,6 +1,7 @@
 ## 关闭管理端actuator 的安全
 ## /env /health 端口完全开放
 management.endpoints.web.exposure.include=*
+management.server.port=10003
 ## 激活 restart Endpoint
 endpoints.restart.enabled = true
 #INSTANCE_INDEX=0
