--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -9,3 +9,5 @@ endpoints.restart.enabled = true
 spring.rabbitmq.addresses=192.168.234.135:5672
 #默认事件跟踪功能是失效，使用时需要激活
 spring.cloud.bus.trace.enabled=true
+
+harry.user=zhouhong
