--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -10,7 +10,8 @@ spring.rabbitmq.addresses=192.168.234.135:5672
 #默认事件跟踪功能是失效，使用时需要激活
 spring.cloud.bus.trace.enabled=true
 
-spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
-spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
+spring.cloud.bus.destination=harry_bus
+#spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
+#spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
 
 harry.user=zhouhong
