--- a/sample/stream-input/src/main/resources/application.yml
+++ b/sample/stream-input/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 spring:
   application:
     name: harry-stream-input
-  #如果消息中间件是Kafka
+  #Kafka
   kafka:
     bootstrap-servers: 192.168.234.135:9092
-  #如果消息中间件是Rabbit，此处Rabbit health check
+  #Rabbit Rabbit health check
   rabbitmq:
     addresses: 192.168.234.135:5672
   cloud:
@@ -15,11 +15,3 @@ spring:
         harry_default_input:
           destination: harry_default
           group: harry_group_default
-#          binder: rabbit_server
-#      binders:
-#        rabbit_server:
-#          type: rabbit
-#          environment:
-#            spring:
-#              rabbitmq:
-#                addresses: 192.168.234.135:5672
