--- a/sample/config-server/src/main/resources/configs/harry-bus-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-bus-server.properties
@@ -5,3 +5,6 @@ management.endpoints.web.exposure.include=*
 endpoints.restart.enabled = true
 ##消息中间件地址
 spring.rabbitmq.addresses=192.168.234.135:5672
+
+spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
+spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
