--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -13,4 +13,4 @@ spring.cloud.bus.trace.enabled=true
 spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
 spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
 
-harry.user=Hello World
+vcap.application.instance_id=${server.port}
