--- a/harry-bus-server.properties
+++ b/harry-bus-server.properties
@@ -14,3 +14,5 @@ spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
 spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
 
 vcap.application.instance_id=${server.port}
+
+harry.user=this is a test
