--- a/sample/bus-server/pom.xml
+++ b/sample/bus-server/pom.xml
@@ -28,6 +28,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!--common-api-->
+        <dependency>
+            <groupId>com.harry</groupId>
+            <artifactId>common-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
