--- a/sample/config-server/src/main/resources/configs/harry-bus-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-bus-server.properties
@@ -8,3 +8,5 @@ spring.rabbitmq.addresses=192.168.234.135:5672
 
 spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
 spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
+#实例id,系统通过app:index:id格式寻址唯一服务实例
+vcap.application.instance_id=${server.port}
