--- a/sample/config-server/src/main/resources/application.properties
+++ b/sample/config-server/src/main/resources/application.properties
@@ -21,3 +21,11 @@ spring.cloud.config.server.git.force-pull = true
 eureka.client.serviceUrl.defaultZone = \
   http://localhost:9091/eureka,\
   http://localhost:9092/eureka
+
+##消息中间件地址
+spring.rabbitmq.addresses=192.168.234.135:5672
+
+spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
+spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
+#实例id,系统通过app:index:id格式寻址唯一服务实例
+vcap.application.instance_id=${server.port}
