--- a/sample/zuul-server/src/main/resources/bootstrap.properties
+++ b/sample/zuul-server/src/main/resources/bootstrap.properties
@@ -2,6 +2,12 @@
 spring.application.name = harry-zuul-server
 ## 服务端口
 server.port = 10000
+
+
+## 激活 Config 服务器发现
+spring.cloud.config.discovery.enabled = true
+## 配置 Config 服务器的应用名称（Service ID）
+spring.cloud.config.discovery.serviceId = harry-config-server
 ## 配置客户端应用关联的应用
 ## spring.cloud.config.name 是可选的
 ## 如果没有配置，采用 ${spring.application.name}
@@ -11,18 +17,23 @@ spring.cloud.config.profile = default
 ## 关联 label
 spring.cloud.config.label = master
 
+
 #通过eureka注册中心的方式连接配置服务器
 ## 注意：当前应用需要提前获取应用信息，那么将 Eureka 的配置信息提前至 bootstrap.properties 文件
 ## 原因：bootstrap 上下文是 Spring Boot 上下文的 父 上下文，那么它最先加载，因此需要最优先加载 Eureka 注册信息
 ## Spring Cloud Eureka 客户端 注册到 Eureka 服务器
 eureka.client.serviceUrl.defaultZone = \
-  http://localhost:9091/eureka,\
-  http://localhost:9092/eureka
-## 激活 Config 服务器发现
-spring.cloud.config.discovery.enabled = true
-## 配置 Config 服务器的应用名称（Service ID）
-spring.cloud.config.discovery.serviceId = harry-config-server
+http://localhost:9091/eureka,\
+http://localhost:9092/eureka
 ## 获取Config 服务器元信息的间隔时间
 eureka.client.registry-fetch-interval-seconds=10
 ## 调整应用元信息的间隔时间
 eureka.client.instance-info-replication-interval-seconds=10
+
+
+##消息中间件地址
+spring.rabbitmq.addresses=192.168.234.135:5672
+spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
+spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
+#实例id,系统通过app:index:id格式寻址唯一服务实例
+vcap.application.instance_id=${server.port}
