--- a/harry-zuul-server.properties
+++ b/harry-zuul-server.properties
@@ -14,8 +14,8 @@ endpoints.restart.enabled = true
 ##权限控制
 #权限登录地址
 harry.security.browser.loginPage=/login.html
-#权限登录方式
-harry.security.browser.loginType=REDIRECT
+#权限登录方式(JSON/REDIRECT)
+harry.security.browser.loginType=JSON
 
 #图形验证码
 harry.security.validateCode.image.length = 4
