--- a/harry-zuul-server.properties
+++ b/harry-zuul-server.properties
@@ -15,7 +15,7 @@ endpoints.restart.enabled = true
 #权限登录地址
 harry.security.browser.loginPage=/login.html
 #权限登录方式(JSON/REDIRECT)
-harry.security.browser.loginType=JSON
+harry.security.browser.loginType=REDIRECT
 
 #图形验证码
 harry.security.validateCode.image.length = 4
