--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -16,12 +16,17 @@ endpoints.restart.enabled = true
 harry.security.browser.loginPage=/login.html
 #权限登录方式
 harry.security.browser.loginType=REDIRECT
-#验证码
+
+#图形验证码
 harry.security.validateCode.image.length = 4
 harry.security.validateCode.image.width = 60
 harry.security.validateCode.image.height = 25
 #验证码拦截的url
 harry.security.validateCode.image.url = /user,/user/*
+
+##短信验证码
+#拦截的url
+harry.security.validateCode.sms.url = /user,/user/*
 #认证授权需要访问的数据源
 ##数据源
 #数据源方式（动态数据源与静态数据源切换开关）
