--- a/sample/auth-api/pom.xml
+++ b/sample/auth-api/pom.xml
@@ -24,6 +24,17 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>-->
+
         <!-- https://mvnrepository.com/artifact/org.springframework.social/spring-social-web -->
         <dependency>
             <groupId>org.springframework.social</groupId>
