--- a/harry-zuul-server.properties
+++ b/harry-zuul-server.properties
@@ -28,6 +28,11 @@ harry.security.validateCode.image.url = /user,/user/*
 #拦截的url
 harry.security.validateCode.sms.url = /user,/user/*
 
+# custom security qq social
+harry.security.social.qq.app-id=101386962
+harry.security.social.qq.app-secret=2a0f820407df400b84a854d054be8b6a
+harry.security.social.qq.provider-id=qq
+
 #认证授权需要访问的数据源
 ##数据源
 #数据源方式（动态数据源与静态数据源切换开关）
