--- a/harry-zuul-server.properties
+++ b/harry-zuul-server.properties
@@ -33,6 +33,10 @@ harry.security.social.qq.app-id=101386962
 harry.security.social.qq.app-secret=2a0f820407df400b84a854d054be8b6a
 harry.security.social.qq.provider-id=qq
 
+#weixin social
+harry.security.social.weixin.app-id=wx7fdc8fedf501f527
+harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
+
 #认证授权需要访问的数据源
 ##数据源
 #数据源方式（动态数据源与静态数据源切换开关）
