--- a/harry-zuul-server.properties
+++ b/harry-zuul-server.properties
@@ -13,7 +13,8 @@ endpoints.restart.enabled = true
 
 ##权限控制
 #权限登录地址
-harry.security.browser.signinPageUrl=/login.html
+harry.security.browser.signInUrl=/login.html
+#harry.security.browser.signUpUrl=/login.html
 #权限登录方式(JSON/REDIRECT)
 harry.security.browser.loginType=JSON
 
