--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -13,7 +13,8 @@ endpoints.restart.enabled = true
 
 ##权限控制
 #权限登录地址
-harry.security.browser.loginPage=/login.html
+harry.security.browser.signInUrl=/login.html
+harry.security.browser.signUpUrl=/signUp.html
 #权限登录方式
 harry.security.browser.loginType=REDIRECT
 
@@ -27,6 +28,14 @@ harry.security.validateCode.image.url = /user,/user/*
 ##短信验证码
 #拦截的url
 harry.security.validateCode.sms.url = /user,/user/*
+
+# custom security qq social
+harry.security.social.qq.app-id=101386962
+harry.security.social.qq.app-secret=2a0f820407df400b84a854d054be8b6a
+#weixin social
+harry.security.social.weixin.app-id=wx7fdc8fedf501f527
+harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
+
 #认证授权需要访问的数据源
 ##数据源
 #数据源方式（动态数据源与静态数据源切换开关）
