--- a/sample/config-server/src/main/resources/application.properties
+++ b/sample/config-server/src/main/resources/application.properties
@@ -10,9 +10,10 @@ management.endpoints.web.exposure.include=*
 
 ## 配置服务器文件系统git 仓库 ${user.dir} 减少平台文件系统的不一致
 #spring.cloud.config.server.git.uri = ${user.dir}/config-server/src/main/resources/configs
-spring.cloud.config.server.git.uri =F:/workspace/harry/git
-## 配置服务器远程 Git 仓库（GitHub）
-#spring.cloud.config.server.git.uri = https://github.com/zhou-harry/2018.git
+#spring.cloud.config.server.git.uri =F:/workspace/harry/git
+## 配置服务器远程 Git 仓库（GitHub）https://github.com/zhou-harry/2018.git
+spring.cloud.config.server.git.uri = https://github.com/zhou-harry/sample
+spring.cloud.config.server.git.search-paths=sample/config-server/src/main/resources/configs
 
 ## 强制拉取 Git 内容
 spring.cloud.config.server.git.force-pull = true
@@ -22,8 +23,8 @@ eureka.client.serviceUrl.defaultZone = \
   http://localhost:9091/eureka,\
   http://localhost:9092/eureka
 
-##消息中间件地址
-spring.rabbitmq.addresses=192.168.234.134:5672
+##消息中间件地址192.168.234.134:5672
+spring.rabbitmq.addresses=192.168.88.128:5672
 
 spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
 spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
