--- a/sample/config-server/src/main/resources/configs/harry-mail-server-prd.properties
+++ b/sample/config-server/src/main/resources/configs/harry-mail-server-prd.properties
@@ -4,7 +4,7 @@ simplejavamail.transportstrategy=SMTP
 simplejavamail.smtp.host=smtp-mail.outlook.com
 simplejavamail.smtp.port=25
 simplejavamail.smtp.username=zhou.hong404@hotmail.com
-simplejavamail.smtp.password=zhou492162583
+simplejavamail.smtp.password=
 
 simplejavamail.defaults.from.name=prd
 simplejavamail.defaults.from.address=zhou.hong404@hotmail.com
