--- a/sample/config-server/src/main/resources/application.properties
+++ b/sample/config-server/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port = 7070
 management.endpoints.web.exposure.include=*
 
 ## 配置服务器文件系统git 仓库 ${user.dir} 减少平台文件系统的不一致
-#spring.cloud.config.server.git.uri = ${user.dir}/config-server/src/main/resources/configs
-#spring.cloud.config.server.git.uri =F:/workspace/harry/git
-## 配置服务器远程 Git 仓库（GitHub）https://github.com/zhou-harry/2018.git
+#spring.cloud.config.server.git.uri = ${user.dir}
+#spring.cloud.config.server.git.search-paths=sample/config-server/src/main/resources/configs
+## 配置服务器远程 Git 仓库（GitHub）
 spring.cloud.config.server.git.uri = https://github.com/zhou-harry/sample
 spring.cloud.config.server.git.search-paths=sample/config-server/src/main/resources/configs
 
