--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -14,9 +14,9 @@ endpoints.restart.enabled = true
 ##权限控制
 #权限登录地址
 harry.security.browser.signInUrl=/login.html
-harry.security.browser.signUpUrl=/signUp.html
-#权限登录方式
-harry.security.browser.loginType=REDIRECT
+#harry.security.browser.signUpUrl=/login.html
+#权限登录方式(JSON/REDIRECT)
+harry.security.browser.loginType=JSON
 
 #图形验证码
 harry.security.validateCode.image.length = 4
@@ -30,8 +30,10 @@ harry.security.validateCode.image.url = /user,/user/*
 harry.security.validateCode.sms.url = /user,/user/*
 
 # custom security qq social
-harry.security.social.qq.app-id=101386962
-harry.security.social.qq.app-secret=2a0f820407df400b84a854d054be8b6a
+harry.security.social.qq.app-id=101575121
+harry.security.social.qq.app-secret=a98ba0e8b2f4e5ef53484a9e0e474360
+harry.security.social.qq.provider-id=callback
+
 #weixin social
 harry.security.social.weixin.app-id=wx7fdc8fedf501f527
 harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
