--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -10,7 +10,8 @@ endpoints.restart.enabled = true
 
 ## 指定 user-client
 #zuul.routes.harry-user-client = /user-client/**
-
+##OAuth2.0#########################################################
+spring.social.auto-connection-views=true
 ##权限控制
 #权限登录地址
 harry.security.browser.signInUrl=/login.html
