--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -17,7 +17,7 @@ spring.social.auto-connection-views=true
 harry.security.browser.signInUrl=/login.html
 #harry.security.browser.signUpUrl=/login.html
 #权限登录方式(JSON/REDIRECT)
-harry.security.browser.loginType=JSON
+harry.security.browser.loginType=REDIRECT
 
 #图形验证码
 harry.security.validateCode.image.length = 4
