--- a/sample/config-server/src/main/resources/application.properties
+++ b/sample/config-server/src/main/resources/application.properties
@@ -22,8 +22,8 @@ eureka.client.serviceUrl.defaultZone = \
   http://localhost:9091/eureka,\
   http://localhost:9092/eureka
 
-##消息中间件地址192.168.234.134:5672
-spring.rabbitmq.addresses=192.168.88.128:5672
+##消息中间件地址
+spring.rabbitmq.addresses=192.168.234.134:5672
 
 spring.cloud.stream.bindings.springCloudBusInput.destination=harry-bus
 spring.cloud.stream.bindings.springCloudBusOutput.destination=harry-bus
