--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -12,6 +12,8 @@ endpoints.restart.enabled = true
 #zuul.routes.harry-user-client = /user-client/**
 ##OAuth2.0#########################################################
 server.session.timeout=1
+
+harry.security.browser.session.maxSessionsPreventsLogin=true
 ##权限控制
 #权限登录地址
 harry.security.browser.signInUrl=/login.html
