--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -11,7 +11,7 @@ endpoints.restart.enabled = true
 ## 指定 user-client
 #zuul.routes.harry-user-client = /user-client/**
 ##OAuth2.0#########################################################
-server.session.timeout=1
+server.servlet.session.timeout=10
 
 harry.security.browser.session.maxSessionsPreventsLogin=true
 ##权限控制
