--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -11,7 +11,13 @@ endpoints.restart.enabled = true
 ## 指定 user-client
 #zuul.routes.harry-user-client = /user-client/**
 ##OAuth2.0#########################################################
+#管理Session的方式
+spring.session.store-type=REDIS
+#单机Session
 server.servlet.session.timeout=600
+#集群Session
+spring.redis.timeout=6000
+spring redis.cluster.nodes=[192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006]
 
 harry.security.browser.session.maxSessionsPreventsLogin=true
 ##权限控制
@@ -39,6 +45,7 @@ harry.security.social.qq.app-secret=a98ba0e8b2f4e5ef53484a9e0e474360
 #weixin social
 harry.security.social.weixin.app-id=wx7fdc8fedf501f527
 harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
+
 
 #认证授权需要访问的数据源
 ##数据源
