--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -17,7 +17,7 @@ spring.session.store-type=REDIS
 server.servlet.session.timeout=600
 #集群Session
 spring.redis.timeout=6000
-#spring redis.cluster.nodes=[192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006]
+spring redis.cluster.nodes=[192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006]
 
 harry.security.browser.session.maxSessionsPreventsLogin=true
 ##权限控制
