--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -19,7 +19,7 @@ server.servlet.session.timeout=600
 spring.redis.timeout=6000
 #spring.redis.host=192.168.234.128
 #spring.redis.port=7001
-spring redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
+spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
 
 harry.security.browser.session.maxSessionsPreventsLogin=true
 ##È¨ÏÞ¿ØÖÆ
