--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -13,14 +13,13 @@ endpoints.restart.enabled = true
 ##OAuth2.0#########################################################
 #管理Session的方式
 spring.session.store-type=REDIS
+spring.session.timeout=6000
 #单机Session
 server.servlet.session.timeout=600
 #集群Session
 spring.redis.timeout=6000
-#spring.redis.host=192.168.234.128
-#spring.redis.port=7001
 spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
-
+#单个账号超过最大会话登录限制后，将不再允许后续登录
 harry.security.browser.session.maxSessionsPreventsLogin=true
 ##权限控制
 #权限登录地址
@@ -33,17 +32,15 @@ harry.security.browser.loginType=REDIRECT
 harry.security.validateCode.image.length = 4
 harry.security.validateCode.image.width = 100
 harry.security.validateCode.image.height = 40
-#验证码拦截的url
+#图形验证码拦截的url
 harry.security.validateCode.image.url = /user,/user/*
 
-##短信验证码
-#拦截的url
+#短信验证码拦截的url
 harry.security.validateCode.sms.url = /user,/user/*
 
 # custom security qq social
 harry.security.social.qq.app-id=101575121
 harry.security.social.qq.app-secret=a98ba0e8b2f4e5ef53484a9e0e474360
-
 #weixin social
 harry.security.social.weixin.app-id=wx7fdc8fedf501f527
 harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
