--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -13,7 +13,8 @@ endpoints.restart.enabled = true
 ##OAuth2.0#########################################################
 #管理Session的方式
 spring.session.store-type=REDIS
-spring.session.timeout=6000
+#Session超时时间
+spring.session.timeout=10
 #单机Session
 server.servlet.session.timeout=600
 #集群Session
