--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -13,11 +13,11 @@ endpoints.restart.enabled = true
 ##OAuth2.0#########################################################
 #管理Session的方式
 spring.session.store-type=REDIS
-server.servlet.session.cookie.http-only=true
-#Session超时时间
-server.servlet.session.timeout= 60
 #设置session在redis中的Namespace，避免和其他key冲突
 spring.session.redis.namespace=spring:session
+#Session超时时间
+server.servlet.session.timeout= 60
+#server.servlet.session.cookie.http-only=true
 #集群Session
 spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
 #单个账号超过最大会话登录限制后，将不再允许后续登录
