--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -14,7 +14,7 @@ endpoints.restart.enabled = true
 #管理Session的方式
 spring.session.store-type=REDIS
 #设置session在redis中的Namespace，避免和其他key冲突
-spring.session.redis.namespace=spring:session
+spring.session.redis.namespace=harry
 #Session超时时间
 server.servlet.session.timeout= 60
 server.servlet.session.cookie.http-only=true
