--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -15,8 +15,9 @@ endpoints.restart.enabled = true
 spring.session.store-type=REDIS
 #设置session在redis中的Namespace，避免和其他key冲突
 spring.session.redis.namespace=harry
-#Session超时时间
-server.servlet.session.timeout= 60
+#Session超时时间(秒)
+server.servlet.session.timeout= 300
+server.servlet.session.cookie.name=HARRY_SESSIONID
 server.servlet.session.cookie.http-only=true
 #集群Session
 spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
