--- a/sample/zuul-server/src/main/resources/bootstrap.properties
+++ b/sample/zuul-server/src/main/resources/bootstrap.properties
@@ -1,8 +1,7 @@
 ## Zuul 网关
 spring.application.name = harry-zuul-server
-## 服务端口
+## 服务端口(因为在qq互联中配置的回调地址是80端口，所以此处用80端口)
 server.port = 80
-
 
 ## 激活 Config 服务器发现
 spring.cloud.config.discovery.enabled = true
