--- a/sample/auth-api/pom.xml
+++ b/sample/auth-api/pom.xml
@@ -15,11 +15,26 @@
 
     <dependencies>
 
+        <!-- spring-session -->
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+            <version>1.3.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!-- Session交给Redis管理，如果未加spring redis启动器的话则需要加lettuce-core并自己创建Redis factory -->
+        <!--<dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>5.1.2.RELEASE</version>
+        </dependency>-->
+
+
+
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
