--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -26,6 +26,8 @@ harry.security.browser.session.maxSessionsPreventsLogin=false
 ##权限控制
 #权限登录地址
 harry.security.browser.signInUrl=/login.html
+#登出地址
+harry.security.browser.signOutUrl=/signOut.html
 #harry.security.browser.signUpUrl=/login.html
 #权限登录方式(JSON/REDIRECT)
 harry.security.browser.loginType=REDIRECT
