--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -53,7 +53,7 @@ harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
 #认证授权需要访问的数据源
 ##数据源
 #数据源方式（动态数据源与静态数据源切换开关）
-harry.datasource.dynamic=true
+harry.datasource.dynamic=false
 #mapper路径
 static.datasource.packageLocation = com.harry.zuul.repository.master
 static.datasource.mapperLocation = classpath:mapper/master/*.xml
