--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -3,13 +3,14 @@ management.endpoints.web.exposure.include=*
 ## 激活 restart Endpoint
 endpoints.restart.enabled = true
 #路由规则
-## 指定 config-client
-#zuul.routes.harry-config-client = /config-client/**
+## 指定 config-server
+#zuul.routes.harry-config-server = /config-server/**
 ## 配置 config(如果zuul已经发布到注册中心，此处则不用提供listOfServers)
-#harry-config-client.ribbon.listOfServers = http://localhost:6060/
-
-## 指定 user-client
-#zuul.routes.harry-user-client = /user-client/**
+#harry-config-server.ribbon.listOfServers = http://localhost:6060/
+###日志收集
+logging.config=classpath:/logback.xml
+## 指定 user-server
+#zuul.routes.harry-user-server = /user-server/**
 ##OAuth2.0#########################################################
 #管理Session的方式
 spring.session.store-type=REDIS
