--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -8,7 +8,7 @@ endpoints.restart.enabled = true
 ## 配置 config(如果zuul已经发布到注册中心，此处则不用提供listOfServers)
 #harry-config-server.ribbon.listOfServers = http://localhost:6060/
 ###日志收集
-logging.config=/logback.xml
+logging.config=classpath:logback.xml
 ## 指定 user-server
 #zuul.routes.harry-user-server = /user-server/**
 ##OAuth2.0#########################################################
