--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -86,6 +86,16 @@ static.datasource.source.maxPoolPreparedStatementPerConnectionSize=20
 static.datasource.source.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 static.datasource.source.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+#oauth
+server.servlet.context-path=/auth
+harry.oauth.clientId=R2dpxQ3vPrtfgF72
+harry.oauth.clientSecret=fDw7Mpkk5czHNuSRtmhGmAGL42CaxQB9
+harry.oauth.redirectUris=http://localhost:8082/login/oauth2/code/
+harry.oauth.user.username=harry
+harry.oauth.user.password=harry
+
+
 #################################################################
 ##动态数据源
 dynamic.datasource.packageLocation = com.harry.zuul.repository.master
