--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -88,7 +88,7 @@ static.datasource.source.filters=stat,wall,log4j
 static.datasource.source.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 #oauth
-server.servlet.context-path=/auth
+#server.servlet.context-path=/auth
 harry.oauth.clientId=R2dpxQ3vPrtfgF72
 harry.oauth.clientSecret=fDw7Mpkk5czHNuSRtmhGmAGL42CaxQB9
 harry.oauth.redirectUris=http://localhost:8082/login/oauth2/code/
