--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -91,7 +91,7 @@ static.datasource.source.connectionProperties=druid.stat.mergeSql=true;druid.sta
 #server.servlet.context-path=/auth
 harry.oauth.clientId=R2dpxQ3vPrtfgF72
 harry.oauth.clientSecret=fDw7Mpkk5czHNuSRtmhGmAGL42CaxQB9
-harry.oauth.redirectUris=http://www.zhouhong.com/oauth2/code/
+harry.oauth.redirectUris=http://localhost:8089/oauth2/code/
 harry.oauth.user.username=harry
 harry.oauth.user.password=harry
 
