--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -89,8 +89,8 @@ static.datasource.source.connectionProperties=druid.stat.mergeSql=true;druid.sta
 
 #oauth
 #server.servlet.context-path=/auth
-harry.oauth.clientId=R2dpxQ3vPrtfgF72
-harry.oauth.clientSecret=fDw7Mpkk5czHNuSRtmhGmAGL42CaxQB9
+harry.oauth.clientId=user
+harry.oauth.clientSecret=harry
 harry.oauth.redirectUris=http://localhost:8089/oauth2/code/
 harry.oauth.user.username=harry
 harry.oauth.user.password=harry
