--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -2,6 +2,8 @@
 management.endpoints.web.exposure.include=*
 ## 激活 restart Endpoint
 endpoints.restart.enabled = true
+##路由服务前缀
+#server.servlet.context-path=/auth
 #路由规则
 ## 指定 config-server
 #zuul.routes.harry-config-server = /config-server/**
@@ -86,14 +88,6 @@ static.datasource.source.maxPoolPreparedStatementPerConnectionSize=20
 static.datasource.source.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 static.datasource.source.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-
-#oauth
-#server.servlet.context-path=/auth
-harry.oauth.clientId=user
-harry.oauth.clientSecret=harry
-harry.oauth.redirectUris=http://localhost:8089/oauth2/code/
-harry.oauth.user.username=harry
-harry.oauth.user.password=harry
 
 
 #################################################################
