--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -44,7 +44,7 @@ harry.security.validateCode.image.height = 40
 harry.security.validateCode.image.url = /user,/user/*
 
 #短信验证码拦截的url
-harry.security.validateCode.sms.url = /user,/user/*
+#harry.security.validateCode.sms.url = /user,/user/*
 
 # custom security qq social
 harry.security.social.qq.app-id=101575121
