--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -41,7 +41,7 @@ harry.security.validateCode.image.length = 4
 harry.security.validateCode.image.width = 100
 harry.security.validateCode.image.height = 40
 #图形验证码拦截的url
-harry.security.validateCode.image.url = /user,/user/*
+#harry.security.validateCode.image.url = /user,/user/*
 
 #短信验证码拦截的url
 #harry.security.validateCode.sms.url = /user,/user/*
