--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -53,6 +53,9 @@ harry.security.social.qq.app-secret=a98ba0e8b2f4e5ef53484a9e0e474360
 harry.security.social.weixin.app-id=wx7fdc8fedf501f527
 harry.security.social.weixin.app-secret=17d1054662a2f839c6acf6148bb5047e
 
+#oauth app
+harry.security.oauth2.storeType=redis
+
 
 #认证授权需要访问的数据源
 ##数据源
