--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -46,7 +46,9 @@ harry.security.validateCode.image.height = 40
 #短信验证码拦截的url
 #harry.security.validateCode.sms.url = /user,/user/*
 
-# custom security qq social
+# custom security
+harry.security.social.open=true
+#qq social
 harry.security.social.qq.app-id=101575121
 harry.security.social.qq.app-secret=a98ba0e8b2f4e5ef53484a9e0e474360
 #weixin social
