--- a/sample/auth-server/src/main/resources/application.properties
+++ b/sample/auth-server/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.session.redis.namespace=harry
 server.servlet.session.cookie.name=HARRY_SESSIONID
 server.servlet.session.cookie.http-only=true
 #¼¯ÈºSession
+spring.redis.timeout=6m
 spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
 
 
