--- a/sample/auth-api/auth-app/pom.xml
+++ b/sample/auth-api/auth-app/pom.xml
@@ -18,6 +18,15 @@
             <artifactId>auth-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.9.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
