--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -29,6 +29,7 @@ spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234
 #单个账号超过最大会话登录限制后，将不再允许后续登录
 harry.security.browser.session.maxSessionsPreventsLogin=false
 ##权限控制
+harry.security.browser.permitUrl=/user/regist
 #权限登录地址
 harry.security.browser.signInUrl=/login.html
 #登出地址
