--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 ## 激活 restart Endpoint
 endpoints.restart.enabled = true
 ##路由服务前缀
-server.servlet.context-path=/zuul
+#server.servlet.context-path=/zuul
 #路由规则
 ## 指定 config-server
 #zuul.routes.harry-config-server = /config-server/**
