--- a/sample/auth-api/auth-core/pom.xml
+++ b/sample/auth-api/auth-core/pom.xml
@@ -34,29 +34,29 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-            <version>${security-oauth2}</version>
+            <version>${security-oauth2-version}</version>
         </dependency>
 
         <!-- social -->
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-config</artifactId>
-            <version>${spring-social}</version>
+            <version>${spring-social-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-core</artifactId>
-            <version>${spring-social}</version>
+            <version>${spring-social-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-security</artifactId>
-            <version>${spring-social}</version>
+            <version>${spring-social-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-web</artifactId>
-            <version>${spring-social}</version>
+            <version>${spring-social-version}</version>
         </dependency>
         <!-- 依赖 Database API -->
         <dependency>
