--- a/sample/base-api/pom.xml
+++ b/sample/base-api/pom.xml
@@ -9,7 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common-api</artifactId>
+    <artifactId>base-api</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>excel-api</module>
+        <module>common-api</module>
+        <module>mail-api</module>
+    </modules>
 
 
 </project>
