--- a/sample/database-api/pom.xml
+++ b/sample/database-api/pom.xml
@@ -17,13 +17,13 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>${druid}</version>
+            <version>${druid-version}</version>
         </dependency>
         <!--pagehelper分页工具类  -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>${pagehelper}</version>
+            <version>${pagehelper-version}</version>
         </dependency>
         <!--MySql-->
         <dependency>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis-spring-boot}</version>
+            <version>${mybatis-spring-boot-version}</version>
         </dependency>
         <!-- jdbc -->
         <dependency>
