--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -25,7 +25,7 @@ server.servlet.session.cookie.name=HARRY_SESSIONID
 server.servlet.session.cookie.http-only=true
 #集群Session
 spring.redis.timeout=6m
-spring.redis.cluster.nodes=192.168.234.128:7001,192.168.234.128:7002,192.168.234.128:7003,192.168.234.128:7004,192.168.234.128:7005,192.168.234.128:7006
+spring.redis.cluster.nodes=192.168.148.130:6379
 #单个账号超过最大会话登录限制后，将不再允许后续登录
 harry.security.browser.session.maxSessionsPreventsLogin=false
 ##权限控制
@@ -69,9 +69,9 @@ harry.datasource.dynamic=false
 static.datasource.packageLocation = com.harry.zuul.repository.master
 static.datasource.mapperLocation = classpath:mapper/master/*.xml
 # 静态数据源
-static.datasource.source.url=jdbc:mysql://localhost:3306/harry?useUnicode=true&serverTimezone=CTT&characterEncoding=utf8&allowMultiQueries=true
+static.datasource.source.url=jdbc:mysql://192.168.148.130:3306/harry?useUnicode=true&serverTimezone=CTT&characterEncoding=utf8&allowMultiQueries=true
 static.datasource.source.username=harry
-static.datasource.source.password=abcd1234
+static.datasource.source.password=Abcd-1234
 static.datasource.source.driverClass=com.mysql.cj.jdbc.Driver
 # 连接池的配置信息
 # 初始化大小，最小，最大
