--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -25,7 +25,8 @@ server.servlet.session.cookie.name=HARRY_SESSIONID
 server.servlet.session.cookie.http-only=true
 #集群Session
 spring.redis.timeout=6m
-spring.redis.cluster.nodes=192.168.148.130:6379
+#spring.redis.cluster.nodes=192.168.148.130:6379
+spring.redis.host=192.168.148.130
 #单个账号超过最大会话登录限制后，将不再允许后续登录
 harry.security.browser.session.maxSessionsPreventsLogin=false
 ##权限控制
