--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -71,7 +71,7 @@ static.datasource.packageLocation = com.harry.zuul.repository.master
 static.datasource.mapperLocation = classpath:mapper/master/*.xml
 # 静态数据源
 static.datasource.source.url=jdbc:mysql://192.168.148.130:3306/harry?useUnicode=true&serverTimezone=CTT&characterEncoding=utf8&allowMultiQueries=true
-static.datasource.source.username=harry
+static.datasource.source.username=root
 static.datasource.source.password=Abcd-1234
 static.datasource.source.driverClass=com.mysql.cj.jdbc.Driver
 # 连接池的配置信息
