--- a/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
+++ b/sample/config-server/src/main/resources/configs/harry-zuul-server.properties
@@ -16,7 +16,7 @@ logging.config=classpath:logback.xml
 #zuul.routes.harry-user-server = /user-server/**
 ##OAuth2.0#########################################################
 #管理Session的方式
-#spring.session.store-type=REDIS
+spring.session.store-type=REDIS
 #设置session在redis中的Namespace，避免和其他key冲突
 spring.session.redis.namespace=harry
 #Session超时时间(秒)
